--- a/Views/Shared/Components/_DefaultCategorySection/Default.cshtml
+++ b/Views/Shared/Components/_DefaultCategorySection/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResultCategoryDto>
 
-<section class="py-5 overflow-hidden">
+<section id="categories" class="py-5 overflow-hidden">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
