--- a/Views/Shared/Components/_DefaultTrendProductsSection/Default.cshtml
+++ b/Views/Shared/Components/_DefaultTrendProductsSection/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResultProductWithCategoryDto>
 
-<section class="py-5">
+<section id="trendproducts" class="py-5">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
