--- a/Views/Shared/Components/_DefaultFeature/Default.cshtml
+++ b/Views/Shared/Components/_DefaultFeature/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResultFeatureDto>
 
-<section class="py-3" style="background-image: url('images/background-pattern.jpg');background-repeat: no-repeat;background-size: cover;">
+<section id="feature" class="py-3" style="background-image: url('images/background-pattern.jpg');background-repeat: no-repeat;background-size: cover;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
