--- a/Views/Shared/_FoodMartLayout.cshtml
+++ b/Views/Shared/_FoodMartLayout.cshtml
@@ -166,50 +166,30 @@
                             <div class="offcanvas-body">
 
                                 <select class="filter-categories border-0 mb-0 me-5">
-                                    <option>Shop by Departments</option>
-                                    <option>Groceries</option>
-                                    <option>Drinks</option>
-                                    <option>Chocolates</option>
+                                    <option>Kategorilere Göre İncele</option>
+                                    <option>Manav</option>
+                                    <option>İçecekler</option>
+                                    <option>Çikolatalar</option>
                                 </select>
 
                                 <ul class="navbar-nav justify-content-end menu-list list-unstyled d-flex gap-md-3 mb-0">
                                     <li class="nav-item active">
-                                        <a href="#women" class="nav-link">Women</a>
+                                        <a href="#feature" class="nav-link">Ana Sayfa</a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a href="#men" class="nav-link">Men</a>
+                                        <a href="#categories" class="nav-link">Kategoriler</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#kids" class="nav-link">Kids</a>
+                                        <a href="#trendproducts" class="nav-link">Trend Ürünler</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#accessories" class="nav-link">Accessories</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-                                        <ul class="dropdown-menu" aria-labelledby="pages">
-                                            <li><a href="index.html" class="dropdown-item">About Us </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Shop </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Single Product </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Cart </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Checkout </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Blog </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Single Post </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Styles </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Contact </a></li>
-                                            <li><a href="index.html" class="dropdown-item">Thank You </a></li>
-                                            <li><a href="index.html" class="dropdown-item">My Account </a></li>
-                                            <li><a href="index.html" class="dropdown-item">404 Error </a></li>
-                                        </ul>
+                                        <a href="#mostsellers" class="nav-link">En Çok Satanlar</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#brand" class="nav-link">Brand</a>
+                                        <a href="#sendmail" class="nav-link">İndirim Kuponu Tanımla</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#sale" class="nav-link">Sale</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#blog" class="nav-link">Blog</a>
+                                        <a href="#mobileapp" class="nav-link">Mobil Uygulama</a>
                                     </li>
                                 </ul>
 
@@ -264,86 +244,86 @@
 
                 <div class="col-md-2 col-sm-6">
                     <div class="footer-menu">
-                        <h5 class="widget-title">Ultras</h5>
+                        <h5 class="widget-title">Hakkımızda</h5>
                         <ul class="menu-list list-unstyled">
                             <li class="menu-item">
-                                <a href="#" class="nav-link">About us</a>
+                                <a href="#" class="nav-link">Biz Kimiz?</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Conditions </a>
+                                <a href="#" class="nav-link">Şartlar ve Koşullar</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Our Journals</a>
+                                <a href="#" class="nav-link">Dergilerimiz</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Careers</a>
+                                <a href="#" class="nav-link">Kariyer</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Affiliate Programme</a>
+                                <a href="#" class="nav-link">Affiliate Programı</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Ultras Press</a>
+                                <a href="#" class="nav-link">Basın Bültenleri</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="footer-menu">
-                        <h5 class="widget-title">Customer Service</h5>
+                        <h5 class="widget-title">Müşteri Hizmetleri</h5>
                         <ul class="menu-list list-unstyled">
                             <li class="menu-item">
-                                <a href="#" class="nav-link">FAQ</a>
+                                <a href="#" class="nav-link">Sıkça Sorulan Sorular</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="#" class="nav-link">İletişim</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Privacy Policy</a>
+                                <a href="#" class="nav-link">Gizlilik Politikası</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Returns & Refunds</a>
+                                <a href="#" class="nav-link">İade ve İptal</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Cookie Guidelines</a>
+                                <a href="#" class="nav-link">Çerez Politikası</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Delivery Information</a>
+                                <a href="#" class="nav-link">Teslimat Bilgileri</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="footer-menu">
-                        <h5 class="widget-title">Customer Service</h5>
+                        <h5 class="widget-title">Müşteri Hizmetleri</h5>
                         <ul class="menu-list list-unstyled">
                             <li class="menu-item">
-                                <a href="#" class="nav-link">FAQ</a>
+                                <a href="#" class="nav-link">Sıkça Sorulan Sorular</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="#" class="nav-link">İletişim</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Privacy Policy</a>
+                                <a href="#" class="nav-link">Gizlilik Politikası</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Returns & Refunds</a>
+                                <a href="#" class="nav-link">İade ve İptal</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Cookie Guidelines</a>
+                                <a href="#" class="nav-link">Çerez Politikası</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Delivery Information</a>
+                                <a href="#" class="nav-link">Teslimat Bilgileri</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-menu">
-                        <h5 class="widget-title">Subscribe Us</h5>
-                        <p>Subscribe to our newsletter to get updates about our grand offers.</p>
+                        <h5 class="widget-title">Bültenimize Abone Olun</h5>
+                        <p>Harika tekliflerimizden haberdar olmak için bültenimize abone olun.</p>
                         <form class="d-flex mt-3 gap-0" role="newsletter">
-                            <input class="form-control rounded-start rounded-0 bg-light" type="email" placeholder="Email Address" aria-label="Email Address">
-                            <button class="btn btn-dark rounded-end rounded-0" type="submit">Subscribe</button>
+                            <input class="form-control rounded-start rounded-0 bg-light" type="email" placeholder="E-posta Adresi" aria-label="E-posta Adresi">
+                            <button class="btn btn-dark rounded-end rounded-0" type="submit">Abone Ol</button>
                         </form>
                     </div>
                 </div>
