--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -57,28 +57,28 @@
 
                         <li class="sidebar-item">
                             <a href="/Admin/Feature/FeatureList/" class='sidebar-link'>
-                                <i class="bi bi-stack"></i>
+                                <i class="bi bi-grid-1x2-fill"></i>
                                 <span>Öne Çıkarılanlar</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
                             <a href="/Admin/Product/ProductList/" class='sidebar-link'>
-                                <i class="bi bi-stack"></i>
+                                <i class="bi bi-basket-fill"></i>
                                 <span>Ürünler</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
                             <a href="/Admin/Sale/SaleList/" class='sidebar-link'>
-                                <i class="bi bi-stack"></i>
+                                <i class="bi bi-cash"></i>
                                 <span>Satışlar</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
                             <a href="/Admin/Discount/DiscountList/" class='sidebar-link'>
-                                <i class="bi bi-stack"></i>
+                                <i class="bi bi-puzzle"></i>
                                 <span>İndirimler</span>
                             </a>
                         </li>
@@ -101,7 +101,7 @@
             <footer>
                 <div class="footer clearfix mb-0 text-muted">
                     <div class="float-start">
-                        <p>&copy;@DateTime.Now</p>
+                        <p>&copy;@DateTime.Now.Year</p>
                     </div>
                     <div class="float-end">
                         <p>
