--- a/Areas/Admin/Views/Product/ProductList.cshtml
+++ b/Areas/Admin/Views/Product/ProductList.cshtml
@@ -54,7 +54,14 @@
                             <tr>
                                 <td>@item.CategoryName</td>
                                 <td>
-                                    <img src="~/@item.CategoryImageURL" style="height:100px; width:100px; object-fit:cover;" />
+                                    @if (item.CategoryImageURL == "default")
+                                    {
+                                        <span>Görsel Yok</span>
+                                    }
+                                    else
+                                    {
+                                        <img src="~/@item.CategoryImageURL" style="height:100px; width:100px; object-fit:cover;" />
+                                    }
                                 </td>
                                 <td>@item.ProductName</td>
                                 <td>@item.UnitType</td>
